@@ -2,6 +2,7 @@
 	- Add an explicit type cast for TCP FASTOPEN fix.
 	- renumbering B-Root's IPv6 address to 2001:500:200::b.
 	- Fix #1275: cached data in cachedb is never used.
+	- Fix #1276: [dnscrypt] add XChaCha20-Poly1305 cipher.
 
 1 June 2017: Ralph
 	- Fix #1274: automatically trim chroot path from dnscrypt key/cert paths
